fix: Adicionando a interface TarefaProjection para lidar com o retorno das functions da entidade Tarefa